<?xml version="1.0"?>
<package format="3">
  <name>spot_cartographer</name>
  <version>0.0.1</version>
  <description>Cartographer config package for Spot robot with 3D LiDAR</description>
  <maintainer email="ana.soethe.chagas@wzl-iqs.rwth-aachen.de">Ana Soethe Chagas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- You don't need these unless you're compiling nodes -->
  <!-- <depend>cartographer_ros</depend>
  <depend>cartographer_ros_msgs</depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
